--- a/index.html
+++ b/index.html
@@ -60,19 +60,15 @@
 
     <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel" data-ride="carousel">
-      <div class="carousel-inner" role="listbox">
-        <div class="item active" style="background-image: url(assets/1.jpg);background-position:right bottom;background-size:cover;">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1 style = "font-weight:700; font-size:45px; height:100px;" class ="typed">Toolkit for Text Generation and Beyond</h1>
-              <p style="font-weight:300;">Assemble Models of Arbitrary Architectures and Learning Paradigms Freely</p>
-              <p><a class="btn btn-lg btn-primary" href="./pages/about.html" role="button">Learn More</a></p>
-            </div>
-          </div>
-        </div>
+	<section class="hero wrap">
+     <div class="container">
+      <div class="inner">    
+        <h1>Toolkit for Text Generation and Beyond</h1>
+        <h2>Assemble Models of Arbitrary Architectures and Learning Paradigms Freely</h2>
+        <p><a class="btn btn-lg btn-primary" href="./pages/about.html" role="button">Learn More</a></p>
       </div>
-    </div><!-- /.carousel -->
+     </div>
+    </section>
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
