--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img class="img-circle" src="assets/tutorials.svg" alt="Generic placeholder image" width="120" height="110">
             <h2>Tutorials</h2>
             <p>Learn how to use Texar in your projects</p>
-            <p><a class="btn btn-default" href="./index.html" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="./index.html" role="button">Coming soon &raquo;</a></p>
           </div>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
