Updated tech report link

--- a/pages/about.html
+++ b/pages/about.html
@@ -168,7 +168,7 @@ agent = tx.agents.SeqPGAgent(samples=outputs.sample_id,
 	<br/>
 	<h2 id="reference">Reference</h2>
 	
-	<p>Check out the <a href="http://www.cs.cmu.edu/~zhitingh/data/hu18texar.pdf">tech report</a> for more details:</p>
+	<p>Check out the <a href="https://arxiv.org/pdf/1809.00794.pdf">tech report</a> for more details:</p>
 	
 	<pre><code class="nohighlight">Texar: A Modularized, Versatile, and Extensible Toolkit for Text Generation
 Zhiting Hu, Haoran Shi, Zichao Yang, Bowen Tan, Tiancheng Zhao, Junxian He, Wentao Wang, Xingjiang Yu, Lianhui Qin, Di Wang, Xuezhe Ma, Hector Liu, Xiaodan Liang, Wanrong Zhu, Devendra Singh Sachan, Eric P. Xing
