--- a/pages/support.html
+++ b/pages/support.html
@@ -41,8 +41,33 @@
                 <!-- <li><a href="#">News</a></li> -->
                 <!-- <li class="active"><a href="../pages/blog.html">Blog</a></li> -->
                 <li><a href="../pages/support.html">Support</a></li>
-                <li><a href="https://texar.readthedocs.io/en/latest">Docs</a></li>
-                <li><a href="https://github.com/asyml/texar">Github</a></li>
+                <li>
+                    <a href="https://medium.com/@texar">
+                        Blog
+                        <svg width="13px" height="13px" viewbox="0 0 512 512">
+                              <title>Redirect</title>
+                                <path style="fill:currentColor;" d="M 405.34 469.332 L 106.66 469.332 L 106.66 170.668 L 240 170.668 L 240 128 L 106.66 128 C 83.191 128 64 147.197 64 170.668 L 64 469.332 C 64 492.803 83.191 512 106.66 512 L 405.34 512 C 428.809 512 448 492.803 448 469.332 L 448 336 L 405.34 336 L 405.34 469.332 Z M 288 128 L 288 170.668 L 375.474 170.668 L 159.999 386.133 L 189.865 415.999 L 405.341 200.529 L 405.341 288 L 448 288 L 448 128 L 288 128 Z"></path>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://texar.readthedocs.io/en/latest">
+                        Documentation
+                        <svg width="13px" height="13px" viewbox="0 0 512 512">
+                              <title>Redirect</title>
+                                <path style="fill:currentColor;" d="M 405.34 469.332 L 106.66 469.332 L 106.66 170.668 L 240 170.668 L 240 128 L 106.66 128 C 83.191 128 64 147.197 64 170.668 L 64 469.332 C 64 492.803 83.191 512 106.66 512 L 405.34 512 C 428.809 512 448 492.803 448 469.332 L 448 336 L 405.34 336 L 405.34 469.332 Z M 288 128 L 288 170.668 L 375.474 170.668 L 159.999 386.133 L 189.865 415.999 L 405.341 200.529 L 405.341 288 L 448 288 L 448 128 L 288 128 Z"></path>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/asyml/texar">
+                        Github
+                        <svg width="13px" height="13px" viewbox="0 0 512 512">
+                              <title>Redirect</title>
+                                <path style="fill:currentColor;" d="M 405.34 469.332 L 106.66 469.332 L 106.66 170.668 L 240 170.668 L 240 128 L 106.66 128 C 83.191 128 64 147.197 64 170.668 L 64 469.332 C 64 492.803 83.191 512 106.66 512 L 405.34 512 C 428.809 512 448 492.803 448 469.332 L 448 336 L 405.34 336 L 405.34 469.332 Z M 288 128 L 288 170.668 L 375.474 170.668 L 159.999 386.133 L 189.865 415.999 L 405.341 200.529 L 405.341 288 L 448 288 L 448 128 L 288 128 Z"></path>
+                        </svg>
+                    </a>
+                </li>
 		<!--
                 <li>
                   <a class="github" href="#github link here" title="Find this project on GitHub"><svg class="icon--github"><use xlink:href="#icon-github"></use></svg></a>
